force-app/main/CFG/objects/SOB_CFG_Field_Mapping__mdt/SOB_CFG_Field_Mapping__mdt.object-meta.xml
<CustomObject>
    <description>Configuration information about mapping fields to/from bus format to SObjects</description>
    <label>Field Mapping</label>
    <pluralLabel>Field Mappings</pluralLabel>
</CustomObject>