force-app/main/CFG/objects/SOB_CFG_Field_Mapping__mdt/fields/Destination_Field__c.field-meta.xml
<CustomField>
    <fullName>Destination_Field__c</fullName>
    <description>Name of destination field</description>
    <inlineHelpText>Name of destination field</inlineHelpText>
    <label>Destination Field Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>