force-app/main/CFG/objects/SOB_CFG_Field_Mapping__mdt/fields/Object_Type__c.field-meta.xml
<CustomField>
    <fullName>Object_Type__c</fullName>
    <description>Type of Object supported by this provider</description>
    <inlineHelpText>Type of Object returned by this provider</inlineHelpText>
    <label>Object Type</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>