force-app/main/CFG/objects/SOB_CFG_Field_Mapping__mdt/fields/Provider__c.field-meta.xml
<CustomField>
    <fullName>Provider__c</fullName>
    <description>Provider that this mapping is related to</description>
    <inlineHelpText>Provider that this mapping is related to</inlineHelpText>
    <label>Provider</label>
    <referenceTo>SOB_CFG_Provider__mdt</referenceTo>
    <relationshipLabel>Field Mappings</relationshipLabel>
    <relationshipName>Field_Mappings</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>