force-app/main/CFG/objects/SOB_CFG_Field_Mapping__mdt/fields/Source_Field__c.field-meta.xml
<CustomField>
    <fullName>Source_Field__c</fullName>
    <description>API path of field on SObject</description>
    <inlineHelpText>API path of field on SObject</inlineHelpText>
    <label>SObject Field Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>